--- a/src/styles/application.scss
+++ b/src/styles/application.scss
@@ -1,3 +1,13 @@
-.just {
-  color: aliceblue;
+// Graphical variables
+@import 'bootstrap/dist/css/bootstrap.css';
+@import "config/colors";
+@import "config/fonts";
+@import "config/bootstrap_variables";
+
+// Your CSS partials
+@import "components/navbar";
+
+* {
+  margin: 0;
+  padding: 0;
 }
