--- a/src/styles/config/_bootstrap_variables.scss
+++ b/src/styles/config/_bootstrap_variables.scss
@@ -4,22 +4,38 @@
 // 3. You can override them below!
 
 // General style
-$font-family-sans-serif:  $body-font;
-$headings-font-family:    $headers-font;
-$body-bg:                 $dark-purple;
+$font-family-sans-serif: $body-font;
+$headings-font-family: $headers-font;
+$body-bg: $dark-green;
 $font-size-base: 1rem;
 
 // Colors
-$body-color: $gray;
-$primary:    $blue;
-$success:    $green;
-$info:       $yellow;
-$danger:     $red;
-$warning:    $orange;
+$body-color: $dark-green;
+$primary: $orange;
+$secondary: $green;
+$success: $green;
+$info: $yellow;
+$danger: $red;
+$warning: $red;
 
 // Buttons & inputs' radius
-$border-radius:    2px;
+$border-radius: 2px;
 $border-radius-lg: 2px;
 $border-radius-sm: 2px;
 
 // Override other variables below!
+
+.bg-primary {
+  --bs-bg-opacity: 1;
+  background-color: $primary !important;
+}
+
+.bg-secondary {
+  --bs-bg-opacity: 1;
+  background-color: $secondary !important;
+}
+
+.bg-dark {
+  --bs-bg-opacity: 1;
+  background-color: $body-bg !important;
+}
