--- a/src/styles/config/_fonts.scss
+++ b/src/styles/config/_fonts.scss
@@ -1,8 +1,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Nova+Square&display=swap');
 
 // Define fonts for body and headers
-$body-font: "Epilogue", "sans-serif";
-$headers-font: "Epilogue", "sans-serif";
+$body-font: 'Nova Square', cursive;
+$headers-font: 'Nova Square', cursive;
 
 // To use a font file (.woff) uncomment following lines
 // @font-face {
