--- a/src/styles/config/_bootstrap_variables.scss
+++ b/src/styles/config/_bootstrap_variables.scss
@@ -11,31 +11,27 @@ $font-size-base: 1rem;
 
 // Colors
 $body-color: $dark-green;
+$see-through-body-color: rgba(38, 70, 83, 0.75);
+
 $primary: $orange;
 $secondary: $green;
-$success: $green;
-$info: $yellow;
-$danger: $red;
-$warning: $red;
+$background-color: $dark-green;
+// $success: $green;
+// $info: $yellow;
+// $danger: $red;
+// $warning: $red;
 
 // Buttons & inputs' radius
 $border-radius: 2px;
 $border-radius-lg: 2px;
 $border-radius-sm: 2px;
 
+
+// Spacing
+$spacer: 5px;
+
+// Effects
+$text-dropshadow: drop-shadow(4px 4px 4px rgba(0, 0, 0, 0.5));
+$box-dropshadow: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.5));
 // Override other variables below!
 
-.bg-primary {
-  --bs-bg-opacity: 1;
-  background-color: $primary !important;
-}
-
-.bg-secondary {
-  --bs-bg-opacity: 1;
-  background-color: $secondary !important;
-}
-
-.bg-dark {
-  --bs-bg-opacity: 1;
-  background-color: $body-bg !important;
-}
