--- a/src/styles/config/_fonts.scss
+++ b/src/styles/config/_fonts.scss
@@ -1,8 +1,8 @@
-@import url('https://fonts.googleapis.com/css2?family=Nova+Square&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Nova+Square&display=swap");
 
 // Define fonts for body and headers
-$body-font: 'Nova Square', cursive;
-$headers-font: 'Nova Square', cursive;
+$body-font: "Nova Square", cursive;
+$headers-font: "Nova Square", cursive;
 
 // To use a font file (.woff) uncomment following lines
 // @font-face {
@@ -14,7 +14,6 @@ $headers-font: 'Nova Square', cursive;
 // }
 // $my-font: "Font Name";
 
-
 * {
-  font: 'Nova Square', cursive;
+  font: "Nova Square", cursive;
 }
