--- a/src/App.css
+++ b/src/App.css
@@ -5,6 +5,15 @@
   font: "Nova Square", cursive;
 }
 
+.btn-primary {
+  border: 2px solid #FF6F1E;
+  box-sizing: border-box;
+  border-radius: 11px;
+  background-color: transparent;
+  color: #FF6F1E;
+  filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
+}
+
 .navbar {
   filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.5));
   background-color: rgba(38, 70, 83, 0.75);
@@ -44,6 +53,29 @@
   height: 90vh;
 }
 
+.social-bar {
+  position: fixed;
+  right: 5vw;
+  bottom: 0px;
+}
+
+.line {
+  height: 33vh;
+  width: 2px;
+  padding: 0;
+  margin: 0;
+  border: 1px solid #2A9D8F;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+}
+
+.linkedin-icon {
+  color: #2A9D8F;
+}
+
+.github-icon {
+  color: #2A9D8F;
+}
+
 * {
   margin: 0;
   padding: 0;
@@ -77,11 +109,11 @@ h1 {
   color: white;
 }
 
-h2 {
+h3 {
   color: #2A9D8F;
 }
 
-h3 {
+h4 {
   color: #FF6F1E;
 }
 
