improved social side bar now links work

--- a/src/styles/components/_social_side_bar.scss
+++ b/src/styles/components/_social_side_bar.scss
@@ -6,7 +6,7 @@
 }
 
 .line {
-  height: 33vh;
+  height: 20vh;
   width: 2px;
   padding: 0;
   margin: 0;
@@ -16,8 +16,10 @@
 
 .linkedin-icon {
   color: $secondary;
+  font-size: x-large;
 }
 
 .github-icon {
   color: $secondary;
+  font-size: x-large;
 }
