improved first section and CTA btn

--- a/src/styles/components/_navbar.scss
+++ b/src/styles/components/_navbar.scss
@@ -17,6 +17,9 @@
   color: $primary;
   filter: $text-dropshadow;
   text-decoration: none;
+  &:hover {
+  color: $secondary;
+  }
 }
 
 .nav-item {
