--- a/src/App.css
+++ b/src/App.css
@@ -5,13 +5,18 @@
   font: "Nova Square", cursive;
 }
 
-.btn-primary {
+.my-btn-primary {
   border: 2px solid #FF6F1E;
   box-sizing: border-box;
   border-radius: 11px;
   background-color: transparent;
   color: #FF6F1E;
   filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
+}
+.my-btn-primary:hover {
+  background-color: #FF6F1E;
+  color: white;
+  border: 2px solid #FF6F1E;
 }
 
 .navbar {
@@ -33,6 +38,9 @@
   color: #FF6F1E;
   filter: drop-shadow(4px 4px 4px rgba(0, 0, 0, 0.5));
   text-decoration: none;
+}
+.nav-link:hover {
+  color: #2A9D8F;
 }
 
 .nav-item {
@@ -60,7 +68,7 @@
 }
 
 .line {
-  height: 33vh;
+  height: 20vh;
   width: 2px;
   padding: 0;
   margin: 0;
@@ -70,10 +78,16 @@
 
 .linkedin-icon {
   color: #2A9D8F;
+  font-size: x-large;
 }
 
 .github-icon {
   color: #2A9D8F;
+  font-size: x-large;
+}
+
+.spinner-logo {
+  filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.5));
 }
 
 * {
@@ -105,12 +119,20 @@ body {
   background: #FF6F1E;
 }
 
+.text-shadow {
+  filter: drop-shadow(4px 4px 4px rgba(0, 0, 0, 0.5));
+}
+
 h1 {
   color: white;
 }
 
-h3 {
+h2 {
   color: #2A9D8F;
+}
+
+h3 {
+  color: #FF6F1E;
 }
 
 h4 {
