--- a/src/App.css
+++ b/src/App.css
@@ -58,9 +58,15 @@
 }
 
 .section {
-  height: 90vh;
+  margin-top: 30%;
 }
 
+@media (min-width: 400px) {
+  .section {
+    height: 90vh;
+    margin-top: 0;
+  }
+}
 .list-group-item {
   background-color: transparent;
   border: none;
