--- a/src/styles/components/_section.scss
+++ b/src/styles/components/_section.scss
@@ -1,5 +1,12 @@
 .section {
-  height: 90vh;
+  margin-top: 30%;
+}
+
+@media (min-width: 400px) {
+  .section {
+    height: 90vh;
+    margin-top: 0;
+  }
 }
 
 .list-group-item {
