--- a/src/App.css
+++ b/src/App.css
@@ -89,14 +89,12 @@
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
 }
 
-.linkedin-icon {
+.icon {
   color: #2A9D8F;
   font-size: x-large;
 }
-
-.github-icon {
-  color: #2A9D8F;
-  font-size: x-large;
+.icon:hover {
+  color: #FF6F1E;
 }
 
 .spinner-logo {
