--- a/src/styles/components/_social_side_bar.scss
+++ b/src/styles/components/_social_side_bar.scss
@@ -14,12 +14,10 @@
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
 }
 
-.linkedin-icon {
+.icon {
   color: $secondary;
   font-size: x-large;
-}
-
-.github-icon {
-  color: $secondary;
-  font-size: x-large;
+  &:hover {
+    color: $primary;
+  }
 }
