created custom card & basic style

--- a/src/styles/application.scss
+++ b/src/styles/application.scss
@@ -11,6 +11,7 @@
 @import "components/section";
 @import "components/social_side_bar";
 @import "components/spinner_logo";
+@import "components/custom_card";
 
 * {
   margin: 0;
