--- a/src/App.css
+++ b/src/App.css
@@ -101,6 +101,32 @@
   filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.5));
 }
 
+.custom-card {
+  position: relative;
+  display: flex;
+  min-width: 0;
+  word-wrap: break-word;
+  background-color: transparent;
+}
+
+.card-title {
+  color: white;
+}
+
+.card-text-box {
+  background: rgba(38, 70, 83, 0.75);
+  width: 60%;
+  height: 60%;
+}
+
+.card-icon {
+  color: #FF6F1E;
+  font-size: x-large;
+}
+.card-icon:hover {
+  color: #2A9D8F;
+}
+
 * {
   margin: 0;
   padding: 0;
