--- a/src/App.css
+++ b/src/App.css
@@ -104,19 +104,35 @@
 .custom-card {
   position: relative;
   display: flex;
-  min-width: 0;
+  max-width: 80%;
   word-wrap: break-word;
   background-color: transparent;
+  transition: max-width 0.5s;
+}
+.custom-card:hover {
+  max-width: 82%;
+}
+
+.card-img {
+  filter: drop-shadow(4px 4px 4px rgba(0, 0, 0, 0.5));
 }
 
 .card-title {
   color: white;
+  position: absolute;
+  right: 0;
+  top: -25px;
+  padding: 0;
+  margin: 0;
 }
 
 .card-text-box {
   background: rgba(38, 70, 83, 0.75);
   width: 60%;
   height: 60%;
+  max-width: 300px;
+  filter: drop-shadow(4px 4px 4px rgba(0, 0, 0, 0.5));
+  border-top: solid 1.5px #FF6F1E;
 }
 
 .card-icon {
