--- a/src/styles/components/_custom_card.scss
+++ b/src/styles/components/_custom_card.scss
@@ -1,22 +1,34 @@
 .custom-card {
   position: relative;
   display: flex;
-  // flex-direction: row
-  min-width: 0;
+  max-width: 80%;
   word-wrap: break-word;
   background-color: transparent;
-  // background-clip: border-box;
-  // border: 1px solid rgba(0, 0, 0, 0.125);
-  // border-radius: 0.25rem;
+  transition: max-width 0.5s;
+  &:hover {
+    max-width: 82%;
+  }
+}
+
+.card-img {
+  filter: drop-shadow(4px 4px 4px rgba(0, 0, 0, 0.5));
 }
 
 .card-title {
   color: $white;
+  position: absolute;
+  right: 0;
+  top: -25px;
+  padding: 0;
+  margin: 0;
 }
 .card-text-box {
   background: rgba($body-bg, 0.75);
   width: 60%;
   height: 60%;
+  max-width: 300px;
+  filter: drop-shadow(4px 4px 4px rgba(0, 0, 0, 0.5));
+  border-top: solid 1.5px $primary;
 }
 
 .card-icon {
