--- a/src/styles/components/_custom_card.scss
+++ b/src/styles/components/_custom_card.scss
@@ -2,12 +2,13 @@
   position: relative;
   display: flex;
   max-width: 80%;
-  word-wrap: break-word;
+  // word-wrap: break-word;
   background-color: transparent;
-  transition: max-width 0.5s;
+  transition: max-width 0.75s;
   &:hover {
     max-width: 82%;
   }
+  min-height: 300px;
 }
 
 .card-img {
