--- a/src/styles/application.scss
+++ b/src/styles/application.scss
@@ -12,6 +12,7 @@
 @import "components/social_side_bar";
 @import "components/spinner_logo";
 @import "components/custom_card";
+@import "components/footer";
 
 * {
   margin: 0;
