--- a/src/App.css
+++ b/src/App.css
@@ -106,11 +106,11 @@
   display: flex;
   max-width: 80%;
   background-color: transparent;
-  transition: max-width 0.75s;
+  transition: max-width 0.25s;
   min-height: 300px;
 }
 .custom-card:hover {
-  max-width: 82%;
+  max-width: 85%;
 }
 
 .card-img {
@@ -120,6 +120,7 @@
 .card-title {
   color: white;
   position: absolute;
+  font-size: medium;
   right: 0;
   top: -25px;
   padding: 0;
@@ -128,11 +129,16 @@
 
 .card-text-box {
   background: rgba(38, 70, 83, 0.75);
+  font-size: small;
   width: 60%;
   height: 60%;
   max-width: 300px;
   filter: drop-shadow(4px 4px 4px rgba(0, 0, 0, 0.5));
   border-top: solid 1.5px #FF6F1E;
+  transition: height 0.25s;
+}
+.card-text-box:hover {
+  height: 75%;
 }
 
 .card-icon {
@@ -146,6 +152,9 @@
 .footer-repo-link {
   text-decoration: none;
   color: #2A9D8F;
+}
+.footer-repo-link:hover {
+  color: #FF6F1E;
 }
 
 * {
