--- a/src/App.css
+++ b/src/App.css
@@ -128,6 +128,7 @@
 }
 
 .card-text-box {
+  position: absolute;
   background: rgba(38, 70, 83, 0.75);
   font-size: small;
   width: 60%;
@@ -136,6 +137,8 @@
   filter: drop-shadow(4px 4px 4px rgba(0, 0, 0, 0.5));
   border-top: solid 1.5px #FF6F1E;
   transition: height 0.25s;
+  transform: translate(-50%, -50%);
+  top: 50%;
 }
 .card-text-box:hover {
   height: 75%;
@@ -144,17 +147,58 @@
 .card-icon {
   color: #FF6F1E;
   font-size: x-large;
+  padding-bottom: 3%;
 }
 .card-icon:hover {
   color: #2A9D8F;
 }
 
+@media (max-width: 950px) {
+  .custom-card {
+    max-width: 90%;
+  }
+}
+@media (max-width: 768px) {
+  .custom-card {
+    background-color: transparent;
+    background-image: url("/public/assets/images/spotify-logo.jpg");
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center;
+    min-height: 100px;
+    max-width: 100%;
+  }
+
+  .card-img {
+    display: none;
+  }
+
+  .card-text-box {
+    position: initial;
+    background: rgba(38, 70, 83, 0.75);
+    font-size: small;
+    width: 100%;
+    height: 100%;
+    max-width: fit-content;
+    filter: drop-shadow(4px 4px 4px rgba(0, 0, 0, 0.5));
+    border-top: solid 1.5px #FF6F1E;
+    transform: none;
+    top: 0;
+  }
+}
 .footer-repo-link {
   text-decoration: none;
   color: #2A9D8F;
 }
 .footer-repo-link:hover {
   color: #FF6F1E;
+}
+
+#work-section {
+  margin-top: 20%;
+}
+#work-section hr {
+  margin-bottom: 10%;
 }
 
 * {
