--- a/src/styles/application.scss
+++ b/src/styles/application.scss
@@ -13,6 +13,7 @@
 @import "components/spinner_logo";
 @import "components/custom_card";
 @import "components/footer";
+@import "components/work_section";
 
 * {
   margin: 0;
