--- a/src/styles/components/_footer.scss
+++ b/src/styles/components/_footer.scss
@@ -1,7 +1,8 @@
 .footer-repo-link {
   text-decoration: none;
+  font-size: smaller;
   color: $secondary;
-   &:hover {
+  &:hover {
     color: $primary;
   }
 }
