--- a/src/styles/application.scss
+++ b/src/styles/application.scss
@@ -13,7 +13,8 @@
 @import "components/spinner_logo";
 @import "components/custom_card";
 @import "components/footer";
-@import "components/work_section";
+@import "components/first_section";
+
 
 * {
   margin: 0;
