--- a/src/styles/components/_custom_card.scss
+++ b/src/styles/components/_custom_card.scss
@@ -35,7 +35,7 @@
   border-top: solid 1.5px $primary;
   transition: height 0.25s;
   &:hover {
-    height: 75%;
+    height: fit-content;
   }
   transform: translate(-50%, -50%);
   top: 50%;
@@ -53,6 +53,9 @@
 @media (max-width: 950px) {
   .custom-card {
     max-width: 90%;
+    &:hover {
+    max-width: 95%;
+  }
   }
 }
 
@@ -82,7 +85,7 @@
     font-size: small;
     width: 100%;
     height: 100%;
-    max-width: fit-content;
+    max-width: 100%;
     filter: drop-shadow(4px 4px 4px rgba(0, 0, 0, 0.5));
     border-top: solid 1.5px $primary;
     transform: none;
