--- a/src/styles/components/_section.scss
+++ b/src/styles/components/_section.scss
@@ -1,11 +1,10 @@
 .section {
-  margin-top: 30%;
+  margin-top: 10%;
 }
 
 @media (min-width: 400px) {
   .section {
-    height: 90vh;
-    margin-top: 0;
+    height: fit-content;
   }
 }
 
