fixed anchors scroll

--- a/src/styles/components/_first_section.scss
+++ b/src/styles/components/_first_section.scss
@@ -1,6 +1,5 @@
-@media (min-width: 400px) {
-  .first-section {
-    margin-top: 0;
-    height: 85vh !important;
-  }
+.first-section {
+  margin-top: 0;
+  height: 85vh !important;
+  scroll-margin-top: 100px;
 }
