--- a/src/App.css
+++ b/src/App.css
@@ -59,6 +59,7 @@
 
 .section {
   margin-top: 10%;
+  scroll-margin-top: 100px;
 }
 
 @media (min-width: 400px) {
@@ -203,12 +204,12 @@
   color: #FF6F1E;
 }
 
-@media (min-width: 400px) {
-  .first-section {
-    margin-top: 0;
-    height: 85vh !important;
-  }
+.first-section {
+  margin-top: 0;
+  height: 85vh !important;
+  scroll-margin-top: 100px;
 }
+
 * {
   margin: 0;
   padding: 0;
