--- a/src/styles/application.scss
+++ b/src/styles/application.scss
@@ -48,10 +48,12 @@ body {
 
 h1 {
   color: $white;
+  font-size: calc(1.375rem + 2.5vw);
 }
 
 h2 {
   color: $secondary;
+  font-size: calc(1.325rem + 2vw);
 }
 
 h3 {
@@ -76,4 +78,8 @@ hr {
   margin: 0 0 10px 0;
   width: 35%;
   background-color: $primary;
+}
+
+a {
+  text-decoration: none;
 }
